WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132576
More long hangs under IOSurfacePool::evict
https://bugs.webkit.org/show_bug.cgi?id=132576
Summary
More long hangs under IOSurfacePool::evict
Tim Horton
Reported
2014-05-05 11:45:28 PDT
https://bugs.webkit.org/show_bug.cgi?id=132549
was not the whole story, there's another bug in the pool where we'll loop forever if we end up with only one in-use surface left and the pool is still too full...
Attachments
patch
(1.61 KB, patch)
2014-05-05 11:54 PDT
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-05-05 11:54:34 PDT
Created
attachment 230842
[details]
patch
Tim Horton
Comment 2
2014-05-05 11:59:58 PDT
http://trac.webkit.org/changeset/168308
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug